2005-09-04  Lars Clausen  <lars@raeder.dk>

	* app/grid.c (snap_to_grid): Bugfix from Zhang Lin-bo
	<zlb@lsec.cc.ac.cn>: Use dynamic grid setting from diagram, not
	global prefs.

	* objects/standard/textobj.c: Applied patch from Grégoire Dooms
	<dooms info ucl ac be>: Add vertical alignment for standard text
	object.  This should really be moved into lib/text.c and apply to
	all text objects.

2005-09-03  Lars Clausen  <lars@raeder.dk>

	* app/connectionpoint_ops.c (connectionpoint_draw): Only draw
	mainpoint when snap-to-objects is not on.

	* app/Makefile.am (ICON_PNG_PAIRS): 
	Fake icons for snap-to-objects.

	* app/commands.[ch]: 
	* app/menus.c (menus_get_image_menubar): 
	* app/display.[ch]: 
	* app/interface.c (create_display_shell): 
	* app/create_object.c (create_object_button_release): 
	* app/disp_callbacks.c (ddisplay_drop_object): 
	* app/object_ops.[ch]: 
	* app/connectionpoint_ops.c (ddisplay_connect_selected): 
	* app/modify_tool.c (modify_button_release): 
	* app/display.[ch]: 
	Togglable snap-to-objects, also doesn't snap when moving entire
	object.  This should be more reasonable in practical use, and can
	be turned off when you want to place your arrows more precisely.

2005-08-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : increased #ifdef MESS:
	With Gtk+-2.7.x cairo must be available so the HAVE_CAIRO case
	becomes even more ugly when the user has choosen *not* to build 
	the diacairo plug-in. If noone can come up with a very convincing 
	reason why it has to be done this way I'll probably go back to 
	my original dont-build-at-all approach when this breaks the 
	next time.

2005-08-02  Lars Clausen  <lars@raeder.dk>

	* objects/standard/arc.c: Patch from Grégoire Dooms
	<dooms@info.ucl.ac.be>: An almost perfect arc autogap
	implementation.  "There is still a small bug when the non
	connected end of the arc is very close to the border of the
	connected object. I think this is due to rounding errors in the