@@ -1,5 +1,8 @@
 2005-09-04  Lars Clausen  <lars@raeder.dk>
 
+	* lib/element.h (ELEMENT_COMMON_PROPERTIES): Remove object
+	dimensions frame to make ext_attributes work again.
+
 	* app/grid.c (snap_to_grid): Bugfix from Zhang Lin-bo
 	<zlb@lsec.cc.ac.cn>: Use dynamic grid setting from diagram, not
 	global prefs.
